# nb4novel

./: .gitignore  CMakeLists.txt  readme.md
src/: nb.c
